# image-compress-saas

./: .gitignore  API.md  MAGIC_LINK_FLOW.md  PREVIEW.md  README.md  SECURE_DEPLOY.md  gen_png.js  package-lock.json  package.json  test-email-preview.html
CSharpTest/: Program.cs
api/: .env.example  SECURITY.md  TESTING.md  api-keys.example.txt  ecosystem.config.js  package-lock.json  package.json  server.js  verify_pro.js
api/controllers/: adminController.js  compressController.js  paymentController.js  usageController.js  userController.js
api/data/: users.db  users.json
api/examples/: usage-stats-response.json
api/middleware/: adminAuth.js  auth.js  rateLimitHeaders.js  sandboxMode.js  universalParser.js
api/routes/: admin.js  compress.js  payments.js  users.js
api/scripts/: addCreditAddOnColumns.js  addQuotaColumns.js  addSecurityColumns.js  createApiKeysTable.js  (+1 more)
client/: index.html  lint_report.json  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1768723699014-7330c8d3f8b27.mjs
docs/: README.md
engine/: Dockerfile  compress-jpg.sh  compress-png.sh  compress.sh
scripts/: generate_image.js  test-e2e-flow.js  test_conversion_feature.js  verify_api_node.js  verify_api_python.py  verify_conversion.js  verify_email.js  verify_quality.js
sdks/shrinkix-python/: README.md  pyproject.toml
sdks/shrinkix-python/shrinkix/: __init__.py  errors.py  transport.py
sdks/shrinkix-python/shrinkix/resources/: __init__.py  limits.py  optimize.py  usage.py
shrinkix-wp/: readme.txt  shrinkix-wp.php  test-api-connection.php
(+267 files in other folders)
